--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/cli": "^2.30.6",
+    "@sanity/image-url": "^1.0.1",
+    "@sanity/vision": "^2.30.5",
     "@thirdweb-dev/react": "^2.6.2",
     "@thirdweb-dev/sdk": "^2.3.35",
+    "@types/node": "^18.7.6",
     "ethers": "^5.6.9",
     "next": "12.2.4",
+    "next-sanity": "^0.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -21,6 +26,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4"
   }
 }
